--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -487,8 +487,8 @@ body {
 		margin-right:5px;
 	  
 	    &:checked ~ .checkmark {
-		  background-color: red;
-		  border: 1px solid red;
+		  background-color: var(--Main2);
+		  border: 1px solid var(--Main2);
 		}
 		&:checked ~ .checkmark:after {
 		  display: block;
@@ -518,49 +518,8 @@ body {
     }	
 }
 
-.tooltipCt {
-    margin-left:10px;
-    color:var(--AdminMain);
-    position: relative;
-    top: -1px;
-}
-.uploadFile {
-    position: relative;
-    text-align: center;
-    padding: 10px 15px;
-    border: 1px solid #cacaca;
-    border-radius: 5px;
-    color:#64748B;
 
-    input[type="file"] {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        opacity:0;
-        cursor: pointer;
-    }
-    svg {
-        margin-left: 5px;
-        font-size: 14px;
-        position: relative;
-        top: -2px;
 
-        path {
-            stroke:#64748B;
-        }
-    }
-}
-
-:global(.btn){
-
-    &.greyBtn {
-        background: #D0D5DD;
-        padding: 10px 15px;
-        border: 1px solid #D0D5DD;
-    }
-}
 .w100 {
     width:100%;
 }
@@ -577,22 +536,37 @@ body {
         margin-top: 56px;
 
         .headerMobile {
-            display: none;
+            display: block;
             position: fixed;
-            top: 56px;
-            background: #c4ccdf;
+            top: 80px;
+            left: 0px;
+            background: var(--Main);
             padding: 15px 15px;
             z-index: 99;
+            transition: 0.5s;
+            opacity: 0;
 
             &.show {
-                display: block;
+                top: 56px;
+                opacity: 1;
+                box-shadow: 0 5px 5px -4px #a6a6a6;
+            }
+        }
+
+        .headerRight {
+
+            ul {
+    
+                li {
+                    margin-left: 20px;
+                }
             }
         }
 
         .mobileHeader {
-            background-color: #20232A;
+            background-color: var(--Main);
             padding: 15px 5px;
-            color: #fff;
+            color:var(--Color);
             margin: 0;
             align-items: center;
             position: fixed;
@@ -605,12 +579,7 @@ body {
             .navlogo {
 
                 .logoIcon {
-                    margin-right: 10px;
-                    width: 25px;
-                    height: 25px;
-                }
-                .logoText {
-                    height: 18px;
+                    height: 30px;
                 }
             }
 
@@ -624,54 +593,10 @@ body {
             }
             
         }
-
-        .headerRow {
-            margin: 0;
-        }
-
-        .headerTitle {
-            border-bottom: 1px solid #dcd9d9;
-            padding: 12px 15px;
-            margin-bottom: 0px;
-
-            h3 {
-                font-size: 16px;
-            }
-        }
     
         
     
-        .headerRight {
-    
-            ul {
-    
-                li {
-                    margin-left: 0px;
-                    background: #e1e1e1;
-                    width: 30px;
-                    height: 30px;
-                    text-align: center;
-                    margin: 0px 4px;
-                    border-radius: 50px;
-
-                    :global(.dropdown) {
-                   
-                        :global(.dropdown-toggle) {
-                           
-                            .menuTT {
-                                display: none;
-                            }
-                            
-                        }
-                    }
-
-                    &.profileBox {
-                        border-left:none;
-                        padding-left: 0px;
-                    }
-                }
-            }
-        }
+        
     }
     .sidebarMain {
         left: -240px;
@@ -683,21 +608,44 @@ body {
 
         .logoBox {
             display: none;
-    
+        }
+        .menuList {
+
+            .scroll {
+                margin-top:20px;
+            }
         }
     
     }
     .pageWrapper {
         margin-left: 0px;
-        padding: 15px 15px;
+        padding:25px 15px 0px 25px;
 
         :global(.card) {
             background-color: transparent;
             border:none;
     
+            :global(.card-title) {
+            
+                h5 {
+                    font-size: 22px;
+    
+                }
+                .rowTitle {
+                    margin-bottom: 10px;
+    
+                    .rowTitleRight {
+                        
+                        :global(.btn) {
+                            min-width: 70px;
+                            padding: 5px 10px;
+                        }
+                    }
+                }
+            }
     
             :global(.card-body) {
-                padding: 20px 20px;
+                padding: 15px 15px;
             }
         }
     }
