--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -342,6 +342,11 @@ body {
                 font-weight: 600;
                 margin-bottom: 0px;
 
+                .back {
+                    color: var(--Main2);
+                    text-decoration:none;
+                    margin-right: 20px;
+                }
             }
             .rowTitle {
                 margin-bottom: 20px;
@@ -355,6 +360,7 @@ body {
                         border-radius: 8px;
                         min-width: 80px;
                         padding: 8px 15px;
+                        margin-left: 10px;
 
                         &:focus {
                             box-shadow: none;
@@ -487,8 +493,8 @@ body {
 		margin-right:5px;
 	  
 	    &:checked ~ .checkmark {
-		  background-color: var(--Main2);
-		  border: 1px solid var(--Main2);
+		  background-color: red;
+		  border: 1px solid red;
 		}
 		&:checked ~ .checkmark:after {
 		  display: block;
@@ -518,10 +524,114 @@ body {
     }	
 }
 
+.tooltipCt {
+    margin-left:10px;
+    color:var(--AdminMain);
+    position: relative;
+    top: -1px;
+}
+.uploadFile {
+    position: relative;
+    text-align: center;
+    padding: 10px 15px;
+    border: 1px solid #cacaca;
+    border-radius: 5px;
+    color:#64748B;
 
+    input[type="file"] {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity:0;
+        cursor: pointer;
+    }
+    svg {
+        margin-left: 5px;
+        font-size: 14px;
+        position: relative;
+        top: -2px;
 
+        path {
+            stroke:#64748B;
+        }
+    }
+}
+
+:global(.btn){
+
+    &.greyBtn {
+        background: #D0D5DD;
+        padding: 10px 15px;
+        border: 1px solid #D0D5DD;
+    }
+}
 .w100 {
     width:100%;
+}
+
+.bgBox {
+    background-color: #fff;
+    padding: 20px;
+}
+
+.totalPayment {
+    display:inline-block;
+    width:100%;
+
+    .simpleTable {
+       width:400px;
+       float: right;
+       margin-right: 20px !important;
+
+        td {
+           text-align: right;
+           border: none;
+        }
+        th {
+           border:none;
+        }
+    }
+
+}
+
+.simpleTable {
+
+    thead {
+
+        tr {
+            background-color: var(--Main2);
+            color:#fff;
+        }
+    }
+
+    th {
+        font-weight: 500;
+        padding: 15px 15px;
+        vertical-align: middle;
+    }
+
+    td {
+         padding: 15px 15px;
+         vertical-align: middle;
+    }
+    tbody {
+       border-top: none !important;
+       background: #fff;
+
+       .nameList {
+
+            h6 {
+                margin-bottom: 3px;
+            }
+            p {
+                margin: 0;
+                color: #909090;
+                font-size: 14px;
+            }
+       }
+    }
 }
 
 
@@ -536,37 +646,22 @@ body {
         margin-top: 56px;
 
         .headerMobile {
-            display: block;
+            display: none;
             position: fixed;
-            top: 80px;
-            left: 0px;
-            background: var(--Main);
+            top: 56px;
+            background: #c4ccdf;
             padding: 15px 15px;
             z-index: 99;
-            transition: 0.5s;
-            opacity: 0;
 
             &.show {
-                top: 56px;
-                opacity: 1;
-                box-shadow: 0 5px 5px -4px #a6a6a6;
-            }
-        }
-
-        .headerRight {
-
-            ul {
-    
-                li {
-                    margin-left: 20px;
-                }
+                display: block;
             }
         }
 
         .mobileHeader {
-            background-color: var(--Main);
+            background-color: #20232A;
             padding: 15px 5px;
-            color:var(--Color);
+            color: #fff;
             margin: 0;
             align-items: center;
             position: fixed;
@@ -579,7 +674,12 @@ body {
             .navlogo {
 
                 .logoIcon {
-                    height: 30px;
+                    margin-right: 10px;
+                    width: 25px;
+                    height: 25px;
+                }
+                .logoText {
+                    height: 18px;
                 }
             }
 
@@ -593,10 +693,54 @@ body {
             }
             
         }
+
+        .headerRow {
+            margin: 0;
+        }
+
+        .headerTitle {
+            border-bottom: 1px solid #dcd9d9;
+            padding: 12px 15px;
+            margin-bottom: 0px;
+
+            h3 {
+                font-size: 16px;
+            }
+        }
     
         
     
-        
+        .headerRight {
+    
+            ul {
+    
+                li {
+                    margin-left: 0px;
+                    background: #e1e1e1;
+                    width: 30px;
+                    height: 30px;
+                    text-align: center;
+                    margin: 0px 4px;
+                    border-radius: 50px;
+
+                    :global(.dropdown) {
+                   
+                        :global(.dropdown-toggle) {
+                           
+                            .menuTT {
+                                display: none;
+                            }
+                            
+                        }
+                    }
+
+                    &.profileBox {
+                        border-left:none;
+                        padding-left: 0px;
+                    }
+                }
+            }
+        }
     }
     .sidebarMain {
         left: -240px;
@@ -608,44 +752,21 @@ body {
 
         .logoBox {
             display: none;
-        }
-        .menuList {
-
-            .scroll {
-                margin-top:20px;
-            }
+    
         }
     
     }
     .pageWrapper {
         margin-left: 0px;
-        padding:25px 15px 0px 25px;
+        padding: 15px 15px;
 
         :global(.card) {
             background-color: transparent;
             border:none;
     
-            :global(.card-title) {
-            
-                h5 {
-                    font-size: 22px;
-    
-                }
-                .rowTitle {
-                    margin-bottom: 10px;
-    
-                    .rowTitleRight {
-                        
-                        :global(.btn) {
-                            min-width: 70px;
-                            padding: 5px 10px;
-                        }
-                    }
-                }
-            }
     
             :global(.card-body) {
-                padding: 15px 15px;
+                padding: 20px 20px;
             }
         }
     }
