--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -20,7 +20,37 @@
         font-size: 15px;
     }
     
+    .paggingRow {
+        margin-top:25px;
 
+        .rowTitleLeft {
+
+            h6 {
+                margin:0;
+                font-weight: normal;
+            }
+        }
+
+        .rowTitleRight {
+            text-align:right;
+
+            .actBtn {
+                background:transparent;
+                padding: 0;
+                border:none;
+
+                button {
+                    background: var(--Main2);
+                    color: #fff;
+                    border: none;
+                    padding: 8px 20px;
+                    min-width: 60px;
+                    border-radius: 8px;
+                    margin-left: 20px;
+                }
+            }
+        }
+    }
     
 }
 
@@ -31,7 +61,57 @@
 @media (max-width: 767px) {
 
     .dataTableBox {
-
+    
        
+        
+        .paggingRow {
+            margin-top:30px;
+    
+            .rowTitleLeft {
+    
+                
+            }
+    
+            .rowTitleRight {
+                text-align:left;
+                display: flex;
+    
+                .actBtn {
+                    margin: 0px 5px;
+                    margin-top:25px;
+                    width:50%;
+    
+                    button {
+                        margin: 0px;
+                        width:100%;
+                        padding: 10px 20px;
+                    }
+                }
+            }
+        }
+        
+    }
+}
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    .dataTableBox {
+    
+        .paggingRow {
+            
+    
+            .rowTitleRight {
+    
+                .actBtn {
+    
+                    button {
+                        margin-left: 10px;
+                    }
+                }
+            }
+        }
+        
     }
 }
