--- a/src/pages/Sales/Orders/Orders.module.scss
+++ b/src/pages/Sales/Orders/Orders.module.scss
@@ -1,145 +1,91 @@
-@import "../../variables.module.scss"; 
 
-.loginSection {
-    font-family: 'Inter', sans-serif;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 50px 0px;
+.ctsPopup {
 
-    .loginBox {
-        background-color: var(--Main);
-        width: 550px;
-        margin: 0 auto;
-        text-align: center;
-        padding: 50px 50px;
-        border-radius: 10px;    
+    :global(.modal-dialog) {
+        
+        :global(.modal-content) {
+            border:none;
+            border-radius: 8px;
+            
+            :global(.modal-header) {
+                background-color:var(--Main2);
+                color:#fff;
+                padding: 15px 20px;
 
-        .logo {
-            margin-bottom: 30px;
-        }
-
-        input:-internal-autofill-selected {
-            background-color: #fff !important;
-        }
-        .formBox {
-            margin-bottom: 20px;
-            position: relative;
-            text-align: left;
-
-            :global(.form-label) {
-                font-weight: 500;
-            }
-
-            .formClass {
-                height: 50px;
-                border-radius: 8px;
-                border-color: #d2d2d2;
-                background-color: #fff;
-
-                &:focus {
-                    border-color:var(--Main2);
-                    box-shadow:none;
+                :global(.btn-close) {
+                    color: #fff;
+                    filter: invert(338%) sepia(0%) saturate(2467%) hue-rotate(130deg) brightness(95%) contrast(320%);
+                    opacity: 1;
                 }
             }
-            .passwordAction {
-                font-size: 22px;
-                position: absolute;
-                right: 0px;
-                top: 45%;
-                transform: translate(-50%, -50%);
-                color: #5e5c5c;
-                cursor: pointer;
-            }
-        }
+            :global(.modal-body) {
+                padding: 20px 20px;
 
-        .forogotPassword {
-            text-decoration: none;
-            color: #000;
-            margin-top: 25px;
-            display: block;
-            font-weight: 500;
-        }
-        .submitBtnRow {
-            display: flex;
-            align-items: center;
-            margin-top: 35px;
+                .formBox {
+                    margin-bottom: 15px;
 
-            .submitBtn {
-                background-color: var(--Main2);
-                color:#fff;
-                font-weight: 600;
-                border-color: #D0D5DD;
-                width: 100%;
-                padding: 12px 10px;
-                text-decoration: none;
-                text-align: center;
-                border-radius: 10px;
+                    :global(.form-label) {
+                        margin: 0;
+                        font-size: 18px;
+                        font-weight: 500;
+                    }
+                    :global(.form-control) {
+                        border: 1px solid #d7d7d7;
+                        border-radius: 8px;
+                        padding: 10px 12px;
+
+                        &:focus {
+                            box-shadow:none;
+                            border-color:var(--Main2);
+                        }
+                    }
+                    :global(.form-select) {
+                        border: 1px solid #d7d7d7;
+                        border-radius: 8px;
+                        padding: 10px 12px;
+
+                        &:focus {
+                            box-shadow:none;
+                            border-color:var(--Main2);
+                        }
+                    }
+                }
             }
+            
+            :global(.modal-footer) {
+                padding: 25px 15px;
+                justify-content: center;
+
+                .leftft {
+
+                    button {
+                        color:var(--Main2);
+                        font-size:18px;
+                        font-weight:600;
+                    }
+                }
+                .rightft {
+                    text-align: right;
+
+                    button {
+                        padding: 10px 30px;
+                        margin-left: 15px;
+                        border-radius: 8px;
+                    }
+                    .close {
+                        background:#AACBFE;
+                        color:#fff;
+                    }
+                    .apply {
+                        background:var(--Main2);
+                        color:#fff;
+                    }
+                }
+            }
+
         }
-        .remberme {
-            margin-top: 20px;
-            font-weight: 500;
-        }
-        
     }
 }
-
-.checkbox {
-	position: relative;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	padding-left: 25px;
-  
-	&:hover input ~ .checkmark {
-	    background-color: #f3f1f1;
-		border: 1px solid #d8d8d8;
-	}
-  
-    input {
-		opacity: 0;
-		margin-right:10px;
-		position:absolute;
-	  
-	    &:checked ~ .checkmark {
-		  background-color: var(--Main2);
-		  border: 1px solid var(--Main2);
-		}
-		&:checked ~ .checkmark:after {
-		  display: block;
-		}
-	}
-	.checkmark {
-		position: absolute;
-		top: 3px;
-		left: 0;
-		height: 18px;
-		width: 18px;
-		background-color: #fff;
-		border-radius: 3px;
-        border: 1px solid #d8d8d8;
-
-	    &:after {
-			content: "";
-			position: absolute;
-			display: none;
-		    left: 6px;
-			top: 2px;
-			width: 5px;
-			height: 10px;
-			border: solid white;
-			border-width: 0 2px 2px 0;
-			-webkit-transform: rotate(45deg);
-		    -ms-transform: rotate(45deg);
-			transform: rotate(45deg);
-		}
-    }	
-}
-
 
 
 /*=======================================================
@@ -147,16 +93,46 @@
 =======================================================*/
 @media (max-width: 767px) {
 
-    .loginSection {
-        position: relative;
-        left: 0%;
-        top: 0%;
-        transform: translate(-0%, -0%);
-        padding: 50px 0px;
-    
-        .loginBox {
-            width: 100%;
-            padding: 30px 30px;
+   
+    .ctsPopup {
+
+        :global(.modal-dialog) {
+            
+            :global(.modal-content) {
+                
+                :global(.modal-body) {
+
+                    .formBox {
+
+                        :global(.form-label) {
+                            margin-bottom:10px;
+                        }
+                    }
+                }
+                
+                :global(.modal-footer) {
+
+                    .leftft {
+
+                        button {
+                            color:var(--Main2);
+                            font-size:18px;
+                            font-weight:600;
+                        }
+                    }
+                    .rightft {
+                        display: flex;
+                        margin-top: 15px;
+
+                        button {
+                            width:50%;
+                            justify-content: center;
+                            margin:0px 5px;
+                        }
+                    }
+                }
+
+            }
         }
     }
 }
