--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -216,7 +216,7 @@ body {
                                     transition: 0.5s;
                                 }
                             }
-                            &:hover {
+                            &:hover , &:focus{
                                 background-color: var(--Main2);
                                 color:#fff;
                                 border-radius: 8px;
@@ -257,7 +257,7 @@ body {
                                         background-color: transparent;
                                         color:var(--Color);
                                     }
-                                    &.active {
+                                    &.active , &:focus{
                                         font-weight: bold;
                                     }
                                 }
@@ -347,6 +347,7 @@ body {
                     text-decoration:none;
                     margin-right: 20px;
                 }
+
             }
             .rowTitle {
                 margin-bottom: 20px;
@@ -493,8 +494,8 @@ body {
 		margin-right:5px;
 	  
 	    &:checked ~ .checkmark {
-		  background-color: red;
-		  border: 1px solid red;
+		  background-color: var(--Main2);
+		  border: 1px solid var(--Main2);
 		}
 		&:checked ~ .checkmark:after {
 		  display: block;
@@ -524,115 +525,26 @@ body {
     }	
 }
 
-.tooltipCt {
-    margin-left:10px;
-    color:var(--AdminMain);
-    position: relative;
-    top: -1px;
-}
-.uploadFile {
-    position: relative;
-    text-align: center;
-    padding: 10px 15px;
-    border: 1px solid #cacaca;
-    border-radius: 5px;
-    color:#64748B;
 
-    input[type="file"] {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        opacity:0;
-        cursor: pointer;
-    }
-    svg {
-        margin-left: 5px;
-        font-size: 14px;
-        position: relative;
-        top: -2px;
 
-        path {
-            stroke:#64748B;
-        }
-    }
-}
-
-:global(.btn){
-
-    &.greyBtn {
-        background: #D0D5DD;
-        padding: 10px 15px;
-        border: 1px solid #D0D5DD;
-    }
-}
 .w100 {
     width:100%;
 }
+.w50 {
+    width:50%;
+}
+
 
 .bgBox {
     background-color: #fff;
     padding: 20px;
 }
-
-.totalPayment {
-    display:inline-block;
-    width:100%;
-
-    .simpleTable {
-       width:400px;
-       float: right;
-       margin-right: 20px !important;
-
-        td {
-           text-align: right;
-           border: none;
-        }
-        th {
-           border:none;
-        }
-    }
-
+.bgremove {
+    background:none;
+    border:none;
+    padding:0;
 }
 
-.simpleTable {
-
-    thead {
-
-        tr {
-            background-color: var(--Main2);
-            color:#fff;
-        }
-    }
-
-    th {
-        font-weight: 500;
-        padding: 15px 15px;
-        vertical-align: middle;
-    }
-
-    td {
-         padding: 15px 15px;
-         vertical-align: middle;
-    }
-    tbody {
-       border-top: none !important;
-       background: #fff;
-
-       .nameList {
-
-            h6 {
-                margin-bottom: 3px;
-            }
-            p {
-                margin: 0;
-                color: #909090;
-                font-size: 14px;
-            }
-       }
-    }
-}
 
 
 /*=======================================================
@@ -648,20 +560,35 @@ body {
         .headerMobile {
             display: none;
             position: fixed;
-            top: 56px;
-            background: #c4ccdf;
+            top: 80px;
+            left: 0px;
+            background: var(--Main);
             padding: 15px 15px;
             z-index: 99;
+            transition: 0.5s;
+            opacity: 0;
 
             &.show {
-                display: block;
+                top: 56px;
+                opacity: 1;
+                box-shadow: 0 5px 5px -4px #a6a6a6;
+            }
+        }
+
+        .headerRight {
+
+            ul {
+    
+                li {
+                    margin-left: 20px;
+                }
             }
         }
 
         .mobileHeader {
-            background-color: #20232A;
-            padding: 15px 5px;
-            color: #fff;
+            background-color: #fff;
+            padding: 15px 15px 15px 15px;
+            color:var(--Color);
             margin: 0;
             align-items: center;
             position: fixed;
@@ -674,15 +601,12 @@ body {
             .navlogo {
 
                 .logoIcon {
-                    margin-right: 10px;
-                    width: 25px;
-                    height: 25px;
-                }
-                .logoText {
-                    height: 18px;
+                    height: 30px;
                 }
             }
-
+            .hembugmenu {
+                font-size:20px;
+            }
             .moreMenu {
                 text-align: right;
 
@@ -693,80 +617,83 @@ body {
             }
             
         }
-
-        .headerRow {
-            margin: 0;
-        }
-
-        .headerTitle {
-            border-bottom: 1px solid #dcd9d9;
-            padding: 12px 15px;
-            margin-bottom: 0px;
-
-            h3 {
-                font-size: 16px;
-            }
-        }
-    
         
-    
-        .headerRight {
-    
-            ul {
-    
-                li {
-                    margin-left: 0px;
-                    background: #e1e1e1;
-                    width: 30px;
-                    height: 30px;
-                    text-align: center;
-                    margin: 0px 4px;
-                    border-radius: 50px;
-
-                    :global(.dropdown) {
-                   
-                        :global(.dropdown-toggle) {
-                           
-                            .menuTT {
-                                display: none;
-                            }
-                            
-                        }
-                    }
-
-                    &.profileBox {
-                        border-left:none;
-                        padding-left: 0px;
-                    }
-                }
-            }
-        }
     }
-    .sidebarMain {
-        left: -240px;
-        top: 56px;
+    .sidebarBody {
+        
+        .sidebarMain {
+            left: -240px;
+            transition:0.5s;
+            z-index:9999;
+        }
+        
+        .hideBg {
+            width: 100%;
+            position: absolute;
+            left: -100%;
+            background: rgba(0, 0, 0, 0.3);
+            height: 100%;
+            top: 0;
+            z-index: 99;
+            transition:0.5s;
+        }
         
         &.show {
-            left: 0px;
-        }
 
-        .logoBox {
-            display: none;
-    
+            .sidebarMain {
+                left: 0px;
+            }
+            
+            .hideBg {
+                left: 0%;
+            }
         }
-    
     }
+    
     .pageWrapper {
         margin-left: 0px;
-        padding: 15px 15px;
+        padding:10px 15px 0px 25px;
 
         :global(.card) {
             background-color: transparent;
             border:none;
     
+            :global(.card-title) {
+            
+                h5 {
+                    font-size: 22px;
+                    margin-bottom: 20px;
+    
+                }
+                .rowTitle {
+                    margin-bottom: 10px;
+    
+                    .rowTitleRight {
+                        display:flex;
+                        flex-wrap: wrap;
+                        
+                        :global(.btn) {
+                            min-width: 70px;
+                            padding: 10px 10px;
+                            margin-left: 0px;
+                            margin-bottom: 10px;
+                            margin-right: 15px;
+
+                            &.width100 {
+                                width:100%;
+                                flex: 0 0 auto;
+                            }
+                            &.width50 {
+                                width:50%;
+                                flex: 0 0 auto;
+                            }
+                        }
+                    }
+                }
+            }
     
             :global(.card-body) {
-                padding: 20px 20px;
+                padding: 15px 15px;
             }
         }
     }
@@ -774,11 +701,6 @@ body {
         margin-left:0px;
         padding: 20px 15px;
     }
-
-    
-.scroll {
-    height: calc(100vh - 58px);
-}
    
 }
 
