--- a/src/pages/Promotion/Discount/Discount.module.scss
+++ b/src/pages/Promotion/Discount/Discount.module.scss
@@ -229,6 +229,7 @@
                 }
                 
                 :global(.modal-footer) {
+                    display: block;
 
                     .leftft {
 
@@ -243,9 +244,15 @@
                         margin-top: 15px;
 
                         button {
-                            width:50%;
+                            width: 49%;
                             justify-content: center;
-                            margin:0px 5px;
+
+                            &.close {
+                               margin: 0px 5px 0px 0px;
+                            }
+                            &.apply {
+                               margin: 0px 0px 0px 5px;
+                            }
                         }
                     }
                 }
