--- a/src/pages/Sales/Orders/Orders.module.scss
+++ b/src/pages/Sales/Orders/Orders.module.scss
@@ -110,7 +110,9 @@
                     }
                 }
                 
+                
                 :global(.modal-footer) {
+                    display: block;
 
                     .leftft {
 
@@ -125,9 +127,15 @@
                         margin-top: 15px;
 
                         button {
-                            width:50%;
+                            width: 49%;
                             justify-content: center;
-                            margin:0px 5px;
+
+                            &.close {
+                               margin: 0px 5px 0px 0px;
+                            }
+                            &.apply {
+                               margin: 0px 0px 0px 5px;
+                            }
                         }
                     }
                 }
