--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -629,7 +629,7 @@ body {
         
         .hideBg {
             width: 100%;
-            position: absolute;
+            position: fixed;
             left: -100%;
             background: rgba(0, 0, 0, 0.3);
             height: 100%;
@@ -677,16 +677,23 @@ body {
                             padding: 10px 10px;
                             margin-left: 0px;
                             margin-bottom: 10px;
-                            margin-right: 15px;
+                            margin-right: 0px;
 
                             &.width100 {
                                 width:100%;
                                 flex: 0 0 auto;
                             }
                             &.width50 {
-                                width:50%;
+                                width:48%;
                                 flex: 0 0 auto;
                             }
+                        }
+                        
+                        .width50:nth-child(1) {
+                            margin-right: 6px;
+                        }
+                        .width50:nth-child(2) {
+                            margin-left: 6px;
                         }
                     }
                 }
