--- a/dot-design-react/src/style.module.scss
+++ b/dot-design-react/src/style.module.scss
@@ -635,6 +635,7 @@ body {
             height: 100%;
             top: 0;
             z-index: 99;
+            transition:0.5s;
         }
         
         &.show {
