--- a/src/pages/Menu/Role/Role.module.scss
+++ b/src/pages/Menu/Role/Role.module.scss
@@ -1,18 +1,4 @@
 
-:global(.card-title) {
-
-    .backBtn {
-
-        :global(.btn) {
-            background-color: var(--Main2);
-            color: #fff;
-            border-radius: 8px;
-            min-width: 80px;
-            padding: 8px 10px;
-        }
-    }
-}
-
 .date {
 
     h5 {
@@ -34,7 +20,10 @@
     }
 }
 
+.checkboxRow {
+ 
 
+}
 .checkbox {
 	position: relative;
 	cursor: pointer;
@@ -144,7 +133,6 @@
                         }
                     }
                 }
-                
             }
             
             :global(.modal-footer) {
@@ -178,36 +166,6 @@
                 }
             }
 
-        }
-    }
-}
-
-.formBox {
-    margin-bottom: 15px;
-
-    :global(.form-label) {
-        margin: 0;
-        font-size: 18px;
-        font-weight: 500;
-    }
-    :global(.form-control) {
-        border: 1px solid #d7d7d7;
-        border-radius: 8px;
-        padding: 10px 12px;
-
-        &:focus {
-            box-shadow:none;
-            border-color:var(--Main2);
-        }
-    }
-    :global(.form-select) {
-        border: 1px solid #d7d7d7;
-        border-radius: 8px;
-        padding: 10px 12px;
-
-        &:focus {
-            box-shadow:none;
-            border-color:var(--Main2);
         }
     }
 }
@@ -246,35 +204,6 @@
         }
     }
     
-}
-
-
-.cardBox {
-    background:#fff;
-    text-align: center;
-    padding: 20px 20px;
-    margin-bottom:25px;
-
-    img {
-        width: 80px;
-        height: 80px;
-        border-radius: 50px;
-        object-fit: cover;
-    }
-    h3 {
-        font-size: 26px;
-        font-weight: 600;
-        margin: 15px 0px;
-    }
-    p {
-
-    }
-    .installBtn {
-        width:100%;
-        background-color: var(--Main2);
-        color:#fff;
-        border-radius: 8px;
-    }
 }
 
 /*=======================================================
@@ -332,5 +261,4 @@
             }
         }
     }
-
 }
