--- a/src/pages/Inventory/Purchaseorder/Purchase.module.scss
+++ b/src/pages/Inventory/Purchaseorder/Purchase.module.scss
@@ -322,21 +322,62 @@
    
 }
 
-.copyto{
-    padding: 12px 40px;
-    justify-content: center;
-align-items: center;
-background: #FFFFFF;
-border-radius: 8px;
-color: #88B7FE;
- border-color:white;
 
+
+.tabsSection {
+
+    :global(.nav-tabs) {
+        border: none;
+
+        :global(.nav-item) {
+            width: 25%;
+            text-align: center;
+
+            :global(.nav-link) {
+                width: 100%;
+                background: #CCE0FE;
+                border-radius: 0px;
+                color: #AAAAAA;
+                padding: 20px 20px;
+                border: none;
+
+                &:global(.active) {
+                    background-color: #AACBFE;
+                    color: #000;
+                }
+            }
+
+        }
+    }
 }
+
 
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
+
+     
+.tabsSection {
+
+    :global(.nav-tabs) {
+
+        :global(.nav-item) {
+            margin-bottom: 5px;
+
+            :global(.nav-link) {
+                padding: 12px 20px;
+                min-width: 100px;
+
+                &:global(.active) {
+                    background-color: var(--Main2);
+                    color: #fff;
+                }
+            }
+
+        }
+    }
+}
 
    
     .ctsPopup {
