--- a/src/pages/Promotion/Combos/Combos.module.scss
+++ b/src/pages/Promotion/Combos/Combos.module.scss
@@ -80,6 +80,44 @@
     }	
 }
 
+.simpleTable {
+
+    thead {
+
+        tr {
+            background-color: var(--Main2);
+            color:#fff;
+        }
+    }
+
+    th {
+        font-weight: 500;
+        padding: 15px 15px;
+        vertical-align: middle;
+    }
+
+    td {
+         padding: 15px 15px;
+         vertical-align: middle;
+    }
+    tbody {
+       border-top: none !important;
+       background: #fff;
+
+       .nameList {
+
+            h6 {
+                margin-bottom: 3px;
+            }
+            p {
+                margin: 0;
+                color: #909090;
+                font-size: 14px;
+            }
+       }
+    }
+}
+
 
 
 .ctsPopup {
@@ -206,11 +244,88 @@
     
 }
 
+.formBox {
+    margin-bottom: 15px;
+
+    :global(.form-label) {
+        margin: 0;
+        font-size: 18px;
+        font-weight: 500;
+    }
+    :global(.form-control) {
+        border: 1px solid #d7d7d7;
+        border-radius: 8px;
+        padding: 10px 12px;
+
+        &:focus {
+            box-shadow:none;
+            border-color:var(--Main2);
+        }
+    }
+    :global(.form-select) {
+        border: 1px solid #d7d7d7;
+        border-radius: 8px;
+        padding: 10px 12px;
+
+        &:focus {
+            box-shadow:none;
+            border-color:var(--Main2);
+        }
+    }
+}
+
+.tabsSection {
+
+    :global(.nav-tabs) {
+        border: none;
+
+        :global(.nav-item) {
+            width: 25%;
+            text-align: center;
+
+            :global(.nav-link) {
+                width: 100%;
+                background: #CCE0FE;
+                border-radius: 0px;
+                color: #AAAAAA;
+                padding: 20px 20px;
+                border: none;
+
+                &:global(.active) {
+                    background-color: #AACBFE;
+                    color: #000;
+                }
+            }
+
+        }
+    }
+}
+
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
 
+    .tabsSection {
+
+        :global(.nav-tabs) {
+    
+            :global(.nav-item) {
+                margin-bottom: 5px;
+    
+                :global(.nav-link) {
+                    padding: 12px 20px;
+                    min-width: 100px;
+    
+                    &:global(.active) {
+                        background-color: var(--Main2);
+                        color: #fff;
+                    }
+                }
+    
+            }
+        }
+    }
    
     .ctsPopup {
 
