--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -65,11 +65,20 @@
        
         
         .paggingRow {
-            margin-top:30px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: #fff;
+            padding: 10px 5px;
+            display: block;
+            margin: 0;
     
             .rowTitleLeft {
     
-                
+                h6 {
+                    margin: 0px 5px;
+                }
             }
     
             .rowTitleRight {
@@ -78,7 +87,7 @@
     
                 .actBtn {
                     margin: 0px 5px;
-                    margin-top:25px;
+                    margin-top: 8px;
                     width:50%;
     
                     button {
