--- a/src/pages/Promotion/Combosdetails/Combosdetails.module.scss
+++ b/src/pages/Promotion/Combosdetails/Combosdetails.module.scss
@@ -1,3 +1,146 @@
+.table50 {
+
+    td {
+        width:50%;
+    }
+    th {
+        width:50%;
+    }
+}
+
+.totalPayment {
+    display:inline-block;
+    width:100%;
+
+    .simpleTable {
+       width:400px;
+       float: right;
+       margin-right: 20px !important;
+
+        td {
+           text-align: right;
+           border: none;
+        }
+        th {
+           border:none;
+        }
+    }
+
+}
+
+.simpleTable {
+
+    thead {
+
+        tr {
+            background-color: var(--Main2);
+            color:#fff;
+        }
+    }
+
+    th {
+        font-weight: 500;
+        padding: 15px 15px;
+        vertical-align: middle;
+    }
+
+    td {
+         padding: 15px 15px;
+         vertical-align: middle;
+    }
+    tbody {
+       border-top: none !important;
+       background: #fff;
+
+       .nameList {
+
+            h6 {
+                margin-bottom: 3px;
+            }
+            p {
+                margin: 0;
+                color: #909090;
+                font-size: 14px;
+            }
+       }
+    }
+}
+
+.action {
+
+    .actionIcon {
+        margin-right:20px;
+        cursor: pointer;
+    }
+}
+.date {
+
+    h6 {
+        font-size:15px;
+        font-weight:500;
+        margin-bottom:0;
+    }
+    p {
+        font-size:14px;
+        color:#909090;
+        margin:0;
+    }
+}
+
+.cardBox {
+    background:#5498FD;
+    padding: 15px 15px;
+    margin-bottom:15px;
+    border-radius: 8px;
+
+    h4 {
+        font-size:15px;
+        margin-bottom: 5px;
+    }
+
+    h3 {
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+}
+
+.countCard {
+    background-color: #EEF5FF;
+    padding: 25px 25px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+
+    h6 {
+        font-size:18px;
+        margin-bottom:15px;
+    }
+    h3 {
+        font-size:32px;
+        margin:0;
+        font-weight:600;
+    }
+}
+
+.tagsList {
+    list-style:none;
+    margin:0;
+    padding:0;
+
+    li {
+        display: inline-block;
+        background: #fff;
+        padding: 10px 15px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        border-radius: 8px;
+        border: 1px solid #dbd7d7;
+        min-width: 100px;
+        text-align: center;
+    }
+}
+
+
 
 .ctsPopup {
 
@@ -86,20 +229,22 @@
         }
     }
 }
-.action {
 
-    .actionIcon {
-        margin-right:20px;
-        cursor: pointer;
-    }
-}
 
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
 
-   
+    .totalPayment {
+    
+        .simpleTable {
+           width:100%;
+           margin-right: 0px !important;
+        }
+    
+    }
+
     .ctsPopup {
 
         :global(.modal-dialog) {
