--- a/src/pages/Menu/Modifieroption/Modifieroption.module.scss
+++ b/src/pages/Menu/Modifieroption/Modifieroption.module.scss
@@ -1,61 +1,4 @@
-.simpleTable {
 
-    thead {
-
-        tr {
-            background-color: var(--Main2);
-            color:#fff;
-        }
-    }
-
-    th {
-        font-weight: 500;
-        padding: 15px 15px;
-        vertical-align: middle;
-    }
-
-    td {
-         padding: 15px 15px;
-         vertical-align: middle;
-    }
-    tbody {
-       border-top: none !important;
-       background: #fff;
-
-       .nameList {
-
-            h6 {
-                margin-bottom: 3px;
-            }
-            p {
-                margin: 0;
-                color: #909090;
-                font-size: 14px;
-            }
-       }
-    }
-}
-
-.action {
-
-    .actionIcon {
-        margin-right:20px;
-        cursor: pointer;
-    }
-}
-.date {
-
-    h6 {
-        font-size:15px;
-        font-weight:500;
-        margin-bottom:0;
-    }
-    p {
-        font-size:14px;
-        color:#909090;
-        margin:0;
-    }
-}
 .date {
 
     h5 {
@@ -77,27 +20,9 @@
     }
 }
 
- .user{
-    span{
-        background-color: red;
-        border-radius: 0.25rem;
-    padding: 0.25rem 0.5rem;
-    font-weight: 600;
-    letter-spacing: .05em;
-    color:white
-    }
-}
+.checkboxRow {
+ 
 
-.buttonlist
-{
-    .spanbtn{
-        button{
-        background-color: white;
-        border-radius: 0.25rem;
-        padding: 0.25rem 0.5rem;
-        margin: 2px;
-        }
-    }
 }
 .checkbox {
 	position: relative;
@@ -245,38 +170,6 @@
     }
 }
 
-.formBox {
-    margin-bottom: 15px;
-
-    :global(.form-label) {
-        margin: 0;
-        font-size: 18px;
-        font-weight: 500;
-    }
-    :global(.form-control) {
-        border: 1px solid #d7d7d7;
-        border-radius: 8px;
-        padding: 10px 12px;
-
-        &:focus {
-            box-shadow:none;
-            border-color:var(--Main2);
-        }
-    }
-    :global(.form-select) {
-        border: 1px solid #d7d7d7;
-        border-radius: 8px;
-        padding: 10px 12px;
-
-        &:focus {
-            box-shadow:none;
-            border-color:var(--Main2);
-        }
-    }
-}
-
-
-
 .importBody {
 
     :global(.modal-header) {
@@ -309,44 +202,18 @@
             color: #fff;
             width:100%;
         }
-        .importBtn {
-            padding: 10px 30px;
-            border-radius: 8px;
-            background: var(--Main2);
-            color: #fff;
-            width:30%;
-            margin: 3px;
-        }
     }
     
 }
-.tabsSection {
+//for casheir css
+.formBox{
 
-    :global(.nav-tabs) {
-        border: none;
-
-        :global(.nav-item) {
-            width: 25%;
-            text-align: center;
-
-            :global(.nav-link) {
-                width: 100%;
-                background: #CCE0FE;
-                border-radius: 0px;
-                color: #AAAAAA;
-                padding: 20px 20px;
-                border: none;
-
-                &:global(.active) {
-                    background-color: #AACBFE;
-                    color: #000;
-                }
-            }
-
-        }
+    .Choosebtn
+    {
+    background-color: #d7d7d7;
+    color:black
     }
 }
-
 
 .pinBox {
 
@@ -362,32 +229,10 @@
         margin-left: 10px !important;
     }
 }
-
-
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
-    .tabsSection {
-
-        :global(.nav-tabs) {
-    
-            :global(.nav-item) {
-                margin-bottom: 5px;
-    
-                :global(.nav-link) {
-                    padding: 12px 20px;
-                    min-width: 100px;
-    
-                    &:global(.active) {
-                        background-color: var(--Main2);
-                        color: #fff;
-                    }
-                }
-    
-            }
-        }
-    }
 
    
     .ctsPopup {
