--- a/src/pages/Promotion/Coupons/Coupons.module.scss
+++ b/src/pages/Promotion/Coupons/Coupons.module.scss
@@ -21,8 +21,6 @@
 }
 
 .checkboxRow {
- 
-
 }
 .checkbox {
 	position: relative;
@@ -204,6 +202,11 @@
         }
     }
     
+}
+
+.table50
+{
+    text-align: center;
 }
 
 /*=======================================================
